--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,16 @@
             <artifactId>modelmapper</artifactId>
             <version>3.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>4.23.0</version>
+        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>net.lbruun.springboot</groupId>-->
+<!--            <artifactId>preliquibase-spring-boot-starter</artifactId>-->
+<!--            <version>1.4.0</version>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
